infra/k8s/auth-depl.yaml
# deployement : image k8s
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: auth # image docker
          # if command: kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf
---
# service : network
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: NodePort
  ports:
    - name: auth
      protocol: TCP
      port: 3005 # port du host
      targetPort: 3000 # port du container
