infra/k8s/client-depl.yaml
# deployement : image k8s
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: client # image docker
---
# service : network
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: NodePort
  ports:
    - name: client
      protocol: TCP
      port: 3001 # port du host
      targetPort: 3001 # port du container
